Add a bunch of the Ink story

--- a/.gitignore
+++ b/.gitignore
@@ -19,5 +19,6 @@ data_*/
 # Inkgd plugin and other ink ignores
 .inkgd_compiler.cfg
 story.json
+*.ink.json
 
 # End of https://www.toptal.com/developers/gitignore/api/godot
